--- a/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
+++ b/backend/webapp/src/main/webapp/frontend/templates/contactable-list.html
@@ -19,27 +19,16 @@
 
         <ion-list  ng-switch-when="ng-repeat"
                    ng-repeat="contactable in ctrl.contactables">
-            <div ng-switch on="ctrl.preferences.nameOrder.selected">
-                <div ng-switch-default
-                     class="item item-divider"
-                     ng-if="ctrl.firstLetter(contactable.name) !== ctrl.firstLetter(ctrl.contactables[$index-1].name)">
-                    {{::ctrl.firstLetter(contactable.name)}}
-                </div>
-                <div ng-switch-when="last-first"
-                     class="item item-divider"
-                     ng-if="ctrl.firstLetter(contactable.lastName) !== ctrl.firstLetter(ctrl.contactables[$index-1].lastName)">
-                    {{::ctrl.firstLetter(contactable.lastName)}}
-                </div>
+            <div class="item item-divider"
+                 ng-if="ctrl.firstLetter(contactable.name) !== ctrl.firstLetter(ctrl.contactables[$index-1].name)">
+                {{::ctrl.firstLetter(contactable.name)}}
             </div>
             <ion-item
                     class="item-avatar item-icon-left item-remove-animate"
                     type="item-text-wrap"
                     href="#/tab/contactables/{{contactable.$$instanceId}}" >
                 <h3 class="{{::ctrl.cachedStateCssClass(contactable)}}">
-                    <span ng-switch on="ctrl.preferences.nameOrder.selected">
-                        <span ng-switch-default>{{contactable.name}}</span>
-                        <span ng-switch-when="'last-first'">{{contactable.lastName}}<span ng-if="contactable.firstName}}">, </span>{{contactable.firstName}}</span>
-                    </span>
+                    <span>{{::contactable.name}}</span>
                 </h3>
                 <div ng-if="contactable.type == 'Contact'">
                     <p>{{::contactable.company}}</p>
@@ -53,16 +42,15 @@
         </ion-list>
 
         <ion-list ng-switch-when="collection-repeat">
+            <!-- combining the ion-list with the div seems to fail,
+                 "collection-repeat is unable to calculate item-height" -->
             <div collection-repeat="contactable in ctrl.contactables">
                 <ion-item
                         class="item-avatar item-icon-left item-remove-animate"
                         type="item-text-wrap"
                         href="#/tab/contactables/{{contactable.$$instanceId}}" >
                     <h3 class="{{ctrl.cachedStateCssClass(contactable)}}">
-                        <span ng-switch on="ctrl.preferences.nameOrder.selected">
-                            <span ng-switch-default>{{contactable.name}}</span>
-                            <span ng-switch-when="'last-first'">{{contactable.lastName}}<span ng-if="contactable.firstName}}">, </span>{{contactable.firstName}}</span>
-                        </span>
+                        <span>{{contactable.name}}</span>
                     </h3>
                     <div ng-if="contactable.type == 'Contact'">
                         <p>{{contactable.company}}</p>
