--- a/backend/webapp/src/main/webapp/mobile/templates/tabs.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/tabs.html
@@ -48,8 +48,9 @@
                     About
                 </div>
                 <div class="item item-text-wrap">
-                    <p>- v0.4.20160211.e (fix swipe-left blank page, tel/email buttons)</p>
+                    <p>- v0.5.20160215 (backend tidy-up)</p>
                     <p>Previous:</p>
+                    <p>- v0.4.20160211.e (fix swipe-left blank page, tel/email buttons)</p>
                     <p>- v0.3.20160203 (display order, better download)</p>
                     <p>- v0.2.20160127 (auto login)</p>
                     <p>- v0.1.20160126 (sidemenus)</p>
