--- a/frontend/www/templates/login.html
+++ b/frontend/www/templates/login.html
@@ -1,7 +1,7 @@
 <ion-view view-title="Login" name="login-view" can-swipe-back="false">
 
     <ion-header-bar align-title="center" class="bar-dark">
-        <h1 class="title">ECP Contacts</h1>
+        <h1 class="title">Eurocommercial Contacts</h1>
     </ion-header-bar>
 
 
