--- a/backend/webapp/src/main/webapp/mobile/templates/contactable-detail.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/contactable-detail.html
@@ -95,7 +95,7 @@
                 <div class="item item-divider">
                     Address
                 </div>
-                <div class="item item-text-wrap">
+                <div class="item multiline">
                     {{ctrl.contactable.address}}
                 </div>
             </div>
