--- a/backend/webapp/src/main/webapp/mobile/templates/login.html
+++ b/backend/webapp/src/main/webapp/mobile/templates/login.html
@@ -38,7 +38,7 @@
     </div>
 
 
-    <div class="bar bar-header bar-stable">
+    <div class="bar bar-footer bar-stable">
         <center>
             <a href="tos.html">Terms of service</a>
         </center>
